2022_01_02
* linke 'tablemissing_' to naniar::gg_miss_upset
2021_10_09
* as.data.frame.wald includes the original wald object as the 'wald' attribute of the returned object
2021_08_06
* added getFix.lmerMod and getFix.glmerMod
2021_07_02
* 'as.data.frame.wald' now includes the L matrix in the returned data frame so subsetting the data frame can provide selected rows of the L matrix
* added 'contr.nhelmert' to construct normalized Helmert coding for factors
2021_06_19
* added sublast to substitute the last occurrence of a pattern in a string
2021_03_02
* added setwd_here which does nothing when knitting
2020_12_13
* xqplot: coerce x to data.frame, to correct problem with tibbles
2020_11_20
* fixed bug with up
2020_11_15
* modified up to return 'Freq'
* fixed 'counts' in 'paik'
2020_11_14
* added empty environment to render_keep
2020_11_09
* fixed cvar so 'up' with the 'freq' argument can return 'grouped data' in the sense of Agrest
2020_11_07
* fixed getFix.lm to return vcov with NA for rank-deficient models
2020_03_14
* added paik from asbio, brewer.pal.show from RColorBrewer::display.brewer.pal, death.penalty data from asbio, and 'getS' to extract
samples and sampling parameters from a 'stanfit' object in rstan.
2020_02_13
* altered 'gd' so it always uses 'superpose=TRUE' as default. Use 'gd_' to get superpose=FALSE
2020_01_02
* added getD to get data frame from a model and optionally add rows (made possible by getModelData by J. Fox)
2019_12_09
* rename 'gspline' 'Gspline' to avert conflicts with package 'gspline'
* version 0.2.1
2019_12_08
* development version 0.2.0.9000
* released version 0.2.0
* added make.grid to generate cartesian product of predictor to help plot fitted responses
* added getModelData (from gspline)
* added copy of pipe (from magrittr)
2019_10_25
* added panel.barchart2 to allow varying heights/widths of bars in a barchart using lattice 
2019_07_09
* added llapply to provide list names and items to function argument in lapply