@@ -91,8 +91,10 @@ export("%>%")
 export("%and%")
 export("%less%")
 export("%or%")
+export(".name<-")
 export("labs<-")
 export(.mat2arr)
+export(.name)
 export(Cmat)
 export(ConjComp)
 export(Diff)
@@ -213,6 +215,7 @@ export(na20)
 export(na2f)
 export(na2t)
 export(name)
+export(napply)
 export(overdisp_fun)
 export(pab)
 export(paik)
