@@ -1,0 +1,11 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/capply.R
+\name{.name}
+\alias{.name}
+\title{Set and extract the '.name' attribute}
+\usage{
+.name(x)
+}
+\description{
+These functions are used with \code{\link{napply}}
+}
